add: redis, chapter12 finished

--- a/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -37,4 +37,8 @@
         <put-attribute name="body" value="/WEB-INF/views/error/duplicate.jsp" />
     </definition>
 
+    <definition name="products" extends="base">
+        <put-attribute name="body" value="/WEB-INF/views/products.jsp" />
+    </definition>
+
 </tiles-definitions>
