add: STOMP user, chapter 18

--- a/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -49,4 +49,8 @@
         <put-attribute name="body" value="/WEB-INF/views/login.jsp" />
     </definition>
 
+    <definition name="homestomp" extends="base">
+        <put-attribute name="body" value="/WEB-INF/views/homeStomp.jsp" />
+    </definition>
+
 </tiles-definitions>
