--- a/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -18,6 +18,10 @@
         <put-attribute name="body" value="/WEB-INF/views/registerForm.jsp" />
     </definition>
 
+    <definition name="addPictureForm" extends="base">
+        <put-attribute name="body" value="/WEB-INF/views/addPictureForm.jsp" />
+    </definition>
+
     <definition name="profile" extends="base">
         <put-attribute name="body" value="/WEB-INF/views/profile.jsp" />
     </definition>
