add: delete bittles forever

--- a/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -57,4 +57,8 @@
         <put-attribute name="body" value="/WEB-INF/views/homeStomp.jsp" />
     </definition>
 
+    <definition name="result" extends="base">
+        <put-attribute name="body" value="/WEB-INF/views/result.jsp" />
+    </definition>
+
 </tiles-definitions>
