--- a/src/main/webapp/WEB-INF/layout/tiles.xml
+++ b/src/main/webapp/WEB-INF/layout/tiles.xml
@@ -61,4 +61,8 @@
         <put-attribute name="body" value="/WEB-INF/views/result.jsp" />
     </definition>
 
+    <definition name="changePwdForm" extends="base">
+        <put-attribute name="body" value="/WEB-INF/views/changePwdForm.jsp" />
+    </definition>
+
 </tiles-definitions>
