--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -1,6 +1,96 @@
-body {
-	font-family: sans-serif;
+
+
+html {
+	background-color: darkgrey;
 }
+
+body {
+	font-family: 'Noto Sans SC', sans-serif;
+	background-color: lightblue;
+	max-width: 900px;
+	margin: 0 auto;
+	padding: 20px 20px 20px 20px;
+ }
+
+nav, article, aside, footer {
+	background-color: lightblue;
+}
+header {
+	margin-bottom: 10px;
+	display: flex;
+	flex-flow: row wrap;
+}
+nav {
+	border: 1px solid darkcyan;
+
+	height: 50px;
+	flex: 100%;
+	display: flex;
+}
+
+nav ul {
+	padding: 0;
+	list-style-type: none;
+	flex: 2;
+	height: 50px;
+	display: flex;
+}
+
+nav li {
+	display: inline;
+	text-align: center;
+	flex: 2;
+	height: 20px;
+	font-size: 16px;
+}
+
+nav li:hover {
+	display: inline;
+	text-align: center;
+	flex: 2;
+	height: 20px;
+	font-size: 16px;
+	background-color: cornflowerblue;
+}
+nav li a {
+	 text-decoration: none;
+ }
+/*布局*/
+main {
+	display: flex;
+}
+
+article, section {
+	flex: 4;
+}
+
+aside {
+	flex: 1;
+	margin-left: 10px;
+	padding: 1%;
+}
+
+aside a {
+	display: block;
+	float: left;
+	width: 100%;
+}
+
+aside img {
+	max-width: 100%;
+}
+
+footer {
+	margin-top: 10px;
+}
+
+h1 {
+	font-family: 'Long Cang', cursive;
+}
+h2 {
+	font-family: 'Long Cang', cursive;
+}
+
 
 .spittleList h1 {
 	font-size: 16pt;
